k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: pfe-app
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
